# vigilator

./: .gitignore  README.md
Vigilator/: CMakeLists.txt  ResourcesList.qml  abstractresource.h  main.cpp  main.qml  monitoraccessmanager.cpp  monitoraccessmanager.h  monitorbridge.cpp  monitorbridge.h  monitorprocess.cpp  monitorprocess.h  monitorresource.cpp  monitorresource.h  monitorservice.cpp  monitorservice.h  notifier.cpp  notifier.h  page.qml  resourceitemmodel.cpp  resourceitemmodel.h  resourceslist.cpp  resourceslist.h  util.cpp  util.h
Vigilator/android/: AndroidManifest.xml
Vigilator/android/src/nl/p_it/vigilator/: BootServiceBroadcastReceiver.java  HealthTester.java  HealthTesterService.java  MonitorService.java  NotificationClient.java
Vigilator/resources/: monitored-resources.conf  output.vigilator
Vigilator/resources/test/: test-resources.conf
Vigilator/src/: CMakeLists.txt  conditionvalidator.cpp  conditionvalidator.h  exposedresource.cpp  exposedresource.h  fileresource.cpp  fileresource.h  internalresource.h  monitor.cpp  monitor.h  monitoreddata.h  monitoredpart.cpp  monitoredpart.h  monitoredresource.cpp  monitoredresource.h  monitoredresourceconfiguration.cpp  monitoredresourcereader.cpp  monitoredresourcereader.h  onboardresource.h  resource.h  resourcestatus.cpp  resourcestatus.h  statusupdater.cpp  statusupdater.h
Vigilator/src/monitor/: conditionvalidator.cpp  config.cpp  config.h  exposedresource.h  fileresource.cpp  internalresource.cpp  internalresource.h  main.cpp  monitor.cpp  monitoreddata.cpp  monitoredresourceconfiguration.h  onboardresource.cpp
Vigilator/test/: conditionvalidatortest.cpp  conditionvalidatortest.h  main.cpp  resourceitemmodeltest.cpp  resourceitemmodeltest.h  testclass.cpp  testclass.h
Vigilator/tests/: CMakeLists.txt  conditionvalidator.cpp  config.cpp  monitoredpart.cpp  monitoredresource.cpp  monitoredresourceconfiguration.cpp  monitoredresourcereader.cpp
